[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "leworldmodel"
version = "0.1.0"
description = "LeWorldModel: Stable End-to-End Joint-Embedding Predictive Architecture from Pixels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy",
    "tqdm",
    "gymnasium",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "tensorboard",
    "opencv-python",
    "imageio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["lewm*"]
